[gd_scene load_steps=16 format=2]

[ext_resource path="res://text_font/TheBlowar-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://text_font/pixelmix_micro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://title_page/new_theme_for_gui.tres" type="Theme" id=3]
[ext_resource path="res://title_page/title_page.gd" type="Script" id=4]
[ext_resource path="res://images/gui/blue-wide-background.jpg" type="Texture" id=5]
[ext_resource path="res://images/game_icon.png" type="Texture" id=6]
[ext_resource path="res://setting_page/always_available_menu.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Title_page" type="Node2D"]
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 405.0
margin_top = 321.0
margin_right = 550.0
margin_bottom = 528.0
rect_scale = Vector2( 1.3, 1.3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 145.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 3, 3 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setting" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 145.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 3, 3 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Setting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 145.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 3, 3 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Leaderboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Customize" type="Button" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 145.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 3, 3 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Customize"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achievement" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 145.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 3, 3 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Achievement"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 145.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 3, 3 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Blue-wide-background" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 511.5, 299.5 )
scale = Vector2( 2.86798, 2.985 )
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
margin_left = 176.0
margin_top = 85.0
margin_right = 240.0
margin_bottom = 101.0
rect_scale = Vector2( 9, 8 )
custom_fonts/font = SubResource( 2 )
text = "Snake.io"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameIcon" type="Sprite" parent="."]
position = Vector2( 826, 141 )
scale = Vector2( 0.264, 0.279234 )
texture = ExtResource( 6 )

[node name="How_to_play" type="Button" parent="."]
margin_left = -20.0
margin_top = 236.0
margin_right = 160.0
margin_bottom = 306.0
custom_colors/font_color = Color( 1, 0.0156863, 0.0156863, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "How to Play ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="always_available_menu" parent="." instance=ExtResource( 7 )]

[connection signal="button_down" from="VBoxContainer/Play" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="VBoxContainer/Setting" to="." method="_on_Setting_button_down"]
[connection signal="button_down" from="VBoxContainer/Leaderboard" to="." method="_on_Leaderboard_button_down"]
[connection signal="button_down" from="VBoxContainer/Customize" to="." method="_on_Customize_button_down"]
[connection signal="button_down" from="VBoxContainer/Achievement" to="." method="_on_Achievement_button_down"]
[connection signal="button_down" from="VBoxContainer/Exit" to="." method="_on_Exit_button_down"]
[connection signal="button_down" from="How_to_play" to="." method="_on_How_to_play_button_down"]
[connection signal="toggled" from="How_to_play" to="." method="_on_How_to_play_toggled"]
